--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ crossterm = "0.29.0"
 hound = "3.5.1"
 ratatui = "0.29.0"
 ringbuf = "0.4.8"
+rtrb = "0.3.2"
 rubato = "0.16.2"
 serde = "1.0.228"
 toml = "0.9.8"
+wide = "0.8.1"
